# directory-documenter

./: ARCHITECT_ADVICE.md  README.md  pyproject.toml
.github/workflows/: build.yaml
directory_documenter/: analyze_directory.py  config.py  document_directory.py  file_utils.py
